Add advice about ORD hotels

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -60,6 +60,8 @@
     It is useful to note that the Chicago Marathon takes place on October 9,
     the Sunday before the main conference. **IMPORTANT:** It may be
     advantageous to book the night from October 9 to October 10 separately from
-    the remainder of the stay.
+    the remainder of the stay. If saving money on lodging is a high priority,
+    additional hotels are available near the CTA Blue Line stations *Rosemont*
+    and *Cumberland* near O'Hare International Airport.
   {% endfilter %}
 {% endblock %}
