Improve advice on cheaper hotels

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -56,12 +56,15 @@
     using booking portals such as [Booking.com](https://booking.com),
     [Hotels.com](https://hotels.com), [Hotwire](https://hotwire.com),
     [Expedia](https://expedia.com) or [Priceline](https://priceline.com), etc.
+    If saving money on lodging is a high priority, additional hotels are
+    available near the CTA Blue Line stations *Rosemont* and *Cumberland* near
+    O'Hare International Airport, with reasonably convenient access to the
+    conference venue via the *Monroe* CTA Blue Line stop in the downtown
+    ("Loop") area.
 
     It is useful to note that the Chicago Marathon takes place on October 9,
     the Sunday before the main conference. **IMPORTANT:** It may be
     advantageous to book the night from October 9 to October 10 separately from
-    the remainder of the stay. If saving money on lodging is a high priority,
-    additional hotels are available near the CTA Blue Line stations *Rosemont*
-    and *Cumberland* near O'Hare International Airport.
+    the remainder of the stay. 
   {% endfilter %}
 {% endblock %}
