--- a/pages/attend.html
+++ b/pages/attend.html
@@ -14,6 +14,8 @@
     of accuracy. See [pricing via our registration vendor](https://cvent.me/eabMXV)
     for authoritative information.
 
+    <b>Early-Bird Registration for PACT 2022 ends Wednesday, September 21, 2022.</b>
+
     ### Full Conference
 
     | Registration Type | Early-Bird | Regular
