--- a/pages/index.html
+++ b/pages/index.html
@@ -28,6 +28,9 @@
       are an important theme of the conference.
       </p>
 
+      <p>
+        <b>Early-Bird Registration for PACT 2022 ends Wednesday, September 21, 2022.</b>
+      </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
         <a href="attend.html" class="btn btn-primary btn-lg px-4 me-md-2">Register Now &raquo;</a>
