Announce travel awards

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -14,8 +14,6 @@
     of accuracy. See [pricing via our registration vendor](https://cvent.me/eabMXV)
     for authoritative information.
 
-    <b>Early-Bird Registration for PACT 2022 ends Wednesday, September 21, 2022.</b>
-
     ### Full Conference
 
     | Registration Type | Early-Bird | Regular
@@ -68,5 +66,71 @@
     the Sunday before the main conference. **IMPORTANT:** It may be
     advantageous to book the night from October 9 to October 10 separately from
     the remainder of the stay. 
+
+    <a id="travel-awards"></a>
+
+    ## Student Travel Awards
+
+    PACT 2022 is offering travel support to encourage student participation at
+    the conference through the generous support of [IEEE
+    TCPP](https://tc.computer.org/tcpp/) and [TCCA](https://ieeetcca.org/) as
+    well as [ACM SIGARCH](https://www.sigarch.org/).
+
+    ### Eligibility and Selection Criteria
+
+    All current students are eligible to apply. Travel grant award decisions
+    are made based on several factors. Priority will be granted to:
+
+    - Students presenting research at the conference (and co-located workshops).
+    - Students who belong to groups underrepresented at PACT (including women).
+    - Students from small institutions and universities that do not have a strong tradition of publishing at PACT and related conferences.
+    - Students who do not have support from their advisors through other grants.
+
+
+    ### At a Glance
+
+    - **Application Deadline: October 1, 2022**
+    - Notification Date: October 5, 2022
+    - Application: Email Travel Grant Chair (see details below)
+
+    ### Reimbursable Expenses
+
+    Students may apply for funds covering conference registration, airfare,
+    ground transportation, and lodging only, between the dates October 7 and October
+    13, 2022. Please note that meals are not eligible for reimbursement. Since
+    the total pot of money is a fixed amount, the amount that can be awarded to each
+    student will depend on the number of awardees, and will cover only a
+    portion of your expenses. Please note that funding is not guaranteed and
+    requires attendance at PACT.
+
+    ### Reimbursement Procedure
+
+    To be reimbursed, students will be expected to present original receipts
+    and fill out a travel expense claim form (provided at a later time). It is
+    imperative that you review the receipts to ensure that the proof of payment
+    (e.g. method of payment with last 4 digits of credit card number) is provided on
+    the receipts.
+
+    ### Application Procedure
+
+    Please send your travel grant application by the deadline via email to the
+    Student Travel Grant Chair, Jose Moreira
+    [`jmoreira@us.ibm.com`](mailto:jmoreira@us.ibm.com).  Use the subject line
+    "PACT 2022 Student Travel Grant Application." The travel grant application
+    (a single consolidated pdf file) should include:
+
+    -   A cover page with the name of the student, contact information, and name
+        of the student's institution and advisor, as well as details of membership
+        in an underrepresented group (including women), if applicable.
+    -   A write-up stating the reason for attending PACT and a description of
+        research interests. This should include information about whether the
+        student is presenting work at the conference (or related workshops).
+    -   A letter from the student's advisor confirming the student's
+        eligibility and recommending the student attend PACT.
+    -   A resume (including an IEEE/ACM student membership number if
+        available); no more than 4 pages.
+    -   An estimate of conference-related expenses, including information about
+        other sources of funding available for the conference travel.
+
   {% endfilter %}
 {% endblock %}
