--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,10 @@
       </p>
 
       <p>
-        <b>Early-Bird Registration for PACT 2022 ends Wednesday, September 21, 2022.</b>
+        {% filter markdown %}
+        **Applications for [Student Travel Awards](attend.html#travel-awards)
+        are now available.**
+        {% endfilter%}
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
@@ -44,6 +47,8 @@
   {% filter markdown %}
     # News
 
+    * **September 24, 2022** Applications for [Student Travel Awards](attend.html#travel-awards)
+      are now available.
     * **September 12, 2022** The [technical program](program.html)
       for the main conference has been announced. **Register now!**
     * **September 5, 2022** Registration for PACT 2022 is now open.
