Remove catering for tutorial/ws lunches

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -86,7 +86,6 @@
     - Students from small institutions and universities that do not have a strong tradition of publishing at PACT and related conferences.
     - Students who do not have support from their advisors through other grants.
 
-
     ### At a Glance
 
     - **Application Deadline: October 1, 2022**
@@ -131,6 +130,22 @@
         available); no more than 4 pages.
     -   An estimate of conference-related expenses, including information about
         other sources of funding available for the conference travel.
+
+    <a id="restaurants"></a>
+
+    ## Area Restaurants
+
+    Some restaurants close to the venue include:
+
+    - [Willis Tower Food Court](https://www.willistower.com/catalog-willis-tower)
+      featuringBrown Bag Seafood Co., Shake Shack, Swwetgreen, Starbucks,
+      Do-Rite Donuts, Sushi-San, and more. (open weekends)
+    - [Franklin Tap](https://www.franklintap.com/) 325 S Franklin St, Chicago, IL 60606 (open weekends)
+    - [Giordanos](https://giordanos.com/), 223 W Jackson Blvd, Chicago, IL 60606 (open weekends)
+    - [The Florentine](https://www.the-florentine.net/), 151 W Adams St, Chicago, IL 60603 (inside Mariott) (open weekends)
+    - [Rivers Restaurant](http://riversrestaurant.com/), 30 S Wacker Dr, Chicago, IL 60606 (closed weekends)
+    - [Urbanspace Food Hall](https://www.urbanspacenyc.com/chi), 316 W Jackson
+      Blvd, Chicago, IL 60606 (closed Saturday)
 
   {% endfilter %}
 {% endblock %}
