--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -43,7 +43,7 @@
       {{ tutorial("9:00", "10:30", "0-0", "Memory-Centric Computing pt. 1", "Orange & Blue Room, IC") }}
       {{ food("10:30", "11:00", "Coffee Break", "Alma Mater Room, IC") }}
       {{ resume("11:00", "12:30") }}
-      {{ food("12:30", "14:00", "Lunch", "Alma Mater Room, IC") }}
+      {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
       {{ tutorial("14:15", "15:45", "0-0", "Memory-Centric Computing pt. 2", "Orange & Blue Room, IC") }}
       {{ tutorial("14:15", "15:45", "0-1", "SHAD C++ Library", "Discovery Room, DPI") }}
       {{ tutorial("14:15", "15:45", "0-2", "NVMExplorer", "Classroom A, DPI") }}
@@ -151,7 +151,7 @@
       {{ tutorial("9:00", "10:30", "1-1", "SODA Synthesizer, pt. 1", "Orange &amp; Blue Room, IC") }}
       {{ food("10:30", "11:00", "Coffee Break") }}
       {{ resume("11:00", "12:30") }}
-      {{ food("12:30", "14:00", "Lunch") }}
+      {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
       {{ tutorial("14:15", "15:45", "1-0", "NextPIM, pt. 2", "Discovery Room, DPI", what="Workshop") }}
       {{ tutorial("14:15", "15:45", "1-1", "SODA Synthesizer, pt. 2", "Orange &amp; Blue Room, IC") }}
       {{ tutorial("14:15", "15:45", "1-2", "SYCL", "Classroom A, DPI") }}
