Add location for steering committee meeting

--- a/pages/program.html
+++ b/pages/program.html
@@ -68,7 +68,7 @@
       <tr>
         <td>12:30&ndash;13:30</td>
         <td>Steering Committee Meeting</td>
-        <td></td>
+        <td>Illini Room, IC</td>
       </tr>
       {{ program_tracks("13:30", "15:00", program["monday"]["afternoon"]) }}
       {{ food("15:00", "15:30", "Coffee Break") }}
