Add info on visa support letters

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -147,5 +147,23 @@
     - [Urbanspace Food Hall](https://www.urbanspacenyc.com/chi), 316 W Jackson
       Blvd, Chicago, IL 60606 (closed Saturday)
 
+    ## Visa Support Letters
+
+    For visa support letters, please contact <supportletters@acm.org>. All
+    requests are handled in the order they are received. The information below
+    should be included with the request:
+
+      -   Your name as it appears on your passport
+      -   Your current postal mailing address
+      -   Name of the conference you are registering for, in our case *PACT 2022*.
+          Only accepted authors may request a visa support letter prior to
+          registering for the conference.
+      -   Your registration confirmation number
+
+    If you have any papers accepted for the conference, please provide the title and
+    indicate whether you are the "sole author" or a "co-author"
+
+    Authors may indicate their paper title. If no paper, speakers can provide the
+    title of their presentation.
   {% endfilter %}
 {% endblock %}
