Add visa-letters anchor

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -147,6 +147,8 @@
     - [Urbanspace Food Hall](https://www.urbanspacenyc.com/chi), 316 W Jackson
       Blvd, Chicago, IL 60606 (closed Saturday)
 
+    <a id="visa-letters"></a>
+
     ## Visa Support Letters
 
     For visa support letters, please contact <supportletters@acm.org>. All
