Fix restaurant typos

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -138,7 +138,7 @@
     Some restaurants close to the venue include:
 
     - [Willis Tower Food Court](https://www.willistower.com/catalog-willis-tower)
-      featuringBrown Bag Seafood Co., Shake Shack, Swwetgreen, Starbucks,
+      featuring Brown Bag Seafood Co., Shake Shack, Sweetgreen, Starbucks,
       Do-Rite Donuts, Sushi-San, and more. (open weekends)
     - [Franklin Tap](https://www.franklintap.com/) 325 S Franklin St, Chicago, IL 60606 (open weekends)
     - [Giordanos](https://giordanos.com/), 223 W Jackson Blvd, Chicago, IL 60606 (open weekends)
