Tweak capitalization in program

--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -22,7 +22,7 @@
     {% macro resume(start, end) %}
       <tr>
         <td>{{ start }}&ndash;{{ end }}</td>
-        <td>Tutorials / Workshops Resume</td>
+        <td>Tutorials / Workshops resume</td>
         <td>(locations as above)</td>
       </tr>
     {% endmacro %}
