Add remaining COMET tutorial authors

--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -230,6 +230,10 @@
     ##### Tutorial: COMET: A Domain-Specific Compilation of High-Performance Computational Chemistry
 
     - **Gokcen Kestor** (Pacific Northwest National Laboratory, Richland, WA)
+    - **Rizwan A. Ashraf** (Pacific Northwest National Laboratory, Richland, WA)
+    - **Luanzheng  Guo** (Pacific Northwest National Laboratory, Richland, WA )
+    - **Ryan D. Friese** (Pacific Northwest National Laboratory, Richland, WA )
+    - **Zhen Peng** (Pacific Northwest National Laboratory, Richland, WA)
 
     The recent slowdown of growth in realized multi-core performance of commodity microprocessors has
     pushed vendors and users to consider more specialized architectures, including GPUs, FPGAs, and
