--- a/pages/attend.html
+++ b/pages/attend.html
@@ -2,40 +2,18 @@
 
 {% block maincol %}
   {% filter markdown %}
-    # Registration
+    # Attending PACT
 
-    Registration for PACT 2022 is now open.
+    What's on this page:
 
-    <a href="https://cvent.me/g3XaGw" class="btn btn-primary btn-lg px-4 me-md-2">Register Now &raquo;</a>
+    - [Registration](#registration)
+    - [Venue](#venue)
+    - [Hotels](#hotels)
+    - [Travel Awards](#travel-awards)
+    - [Area Restaurants](#restaurants)
+    - [Visa Support Letters](#visa-letters)
 
-    ## Registration Rates
-
-    Pricing and policy information is reproduced here for convenience, without guarantees
-    of accuracy. See [pricing via our registration vendor](https://cvent.me/eabMXV)
-    for authoritative information.
-
-    ### Full Conference
-
-    | Registration Type | Early-Bird | Regular
-    | ------------------ | --------- | ----
-    | ACM/IEE Member | $650 | $780
-    | Non-Member | $780 | $940
-    | Student Member| $450 | $550
-    | Student Non-Member| $540 | $660
-
-    ### Tutorials/Workshops
-
-    | Registration Type | Early-Bird | Regular
-    | ------------------ | --------- | ----
-    | ACM/IEE Member |  $350 | $420
-    | Non-Member | $420 | $500
-    | Student Member| $240 | $290
-    | Student Non-Member| $290 | $350
-
-    ## Cancellation Policy
-
-    If you cancel your attendance on or before September 17, a $150 cancellation
-    fee is due. Cancellations after this date do not receive a refund.
+    <a id="venue"></a>
 
     ## Venue
 
@@ -49,6 +27,45 @@
     Some sessions will be held at the [Illini
     Center](https://illinicenter.illinois.edu/), located on the 19th Floor of
     200 South Wacker Drive.
+
+    <a id="registration"></a>
+
+    ## Registration
+
+    Registration for PACT 2022 is now open.
+
+    <a href="https://cvent.me/g3XaGw" class="btn btn-primary btn-lg px-4 me-md-2">Register Now &raquo;</a>
+
+    ### Registration Rates
+
+    Pricing and policy information is reproduced here for convenience, without guarantees
+    of accuracy. See [pricing via our registration vendor](https://cvent.me/eabMXV)
+    for authoritative information.
+
+    #### Full Conference
+
+    | Registration Type | Early-Bird | Regular
+    | ------------------ | --------- | ----
+    | ACM/IEE Member | $650 | $780
+    | Non-Member | $780 | $940
+    | Student Member| $450 | $550
+    | Student Non-Member| $540 | $660
+
+    #### Tutorials/Workshops
+
+    | Registration Type | Early-Bird | Regular
+    | ------------------ | --------- | ----
+    | ACM/IEE Member |  $350 | $420
+    | Non-Member | $420 | $500
+    | Student Member| $240 | $290
+    | Student Non-Member| $290 | $350
+
+    ### Cancellation Policy
+
+    If you cancel your attendance on or before September 17, a $150 cancellation
+    fee is due. Cancellations after this date do not receive a refund.
+
+    <a id="hotels"></a>
 
     ## Hotel Bookings
 
