Nix catered lunches

--- a/pages/program.html
+++ b/pages/program.html
@@ -64,7 +64,7 @@
       {{ keynote("Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design", 0) }}
       {{ food("9:30", "10:00", "Coffee Break") }}
       {{ program_tracks("10:00", "12:00", program["monday"]["morning"]) }}
-      {{ food("12:00", "13:30", "Lunch (catered)") }}
+      {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
       <tr>
         <td>12:30&ndash;13:30</td>
         <td>Steering Committee Meeting</td>
@@ -137,7 +137,7 @@
         <td>Classroom B, DPI</td>
       </tr>
       {{ program_tracks("10:00", "12:00", program["tuesday"]["morning"], ["Orange &amp; Blue Room, IC"]) }}
-      {{ food("12:00", "13:30", "Lunch (catered)") }}
+      {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
       {{ program_tracks("13:30", "15:00", program["tuesday"]["afternoon"]) }}
       {{ food("15:00", "15:30", "Coffee Break") }}
       {{ program_tracks("15:30", "17:00", program["tuesday"]["evening"]) }}
