--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -147,37 +147,16 @@
         <td>Where</td>
       </thead>
       {{ food("8:00", "9:00", "Continental Breakfast") }}
-      {{ tutorial("9:00", "10:30", "1-0", "NextPIM, pt. 1", "Discovery Room, DPI", what="Workshop") }}
+      {{ tutorial("9:00", "10:30", "1-3", "COMET", "Discovery Room, DPI") }}
       {{ tutorial("9:00", "10:30", "1-1", "SODA Synthesizer, pt. 1", "Orange &amp; Blue Room, IC") }}
-      {{ tutorial("9:00", "10:30", "1-3", "COMET", "Classroom A, DPI") }}
       {{ food("10:30", "11:00", "Coffee Break") }}
       {{ resume("11:00", "12:30") }}
       {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
-      {{ tutorial("14:15", "15:45", "1-0", "NextPIM, pt. 2", "Discovery Room, DPI", what="Workshop") }}
+      {{ tutorial("14:15", "15:45", "1-2", "SYCL", "Discovery Room, DPI") }}
       {{ tutorial("14:15", "15:45", "1-1", "SODA Synthesizer, pt. 2", "Orange &amp; Blue Room, IC") }}
-      {{ tutorial("14:15", "15:45", "1-2", "SYCL", "Classroom A, DPI") }}
       {{ food("15:45", "16:15", "Coffee Break") }}
       {{ resume("16:15", "17:45") }}
     </table>
-
-    <a id="tut1-0"></a>
-
-    ##### Workshop: NextPIM --- Evolution of PIM for Next-Generation Computing
-
-    - **Karthik Swaminathan** (IBM Research)
-    - **Saransh Gupta** (IBM Research)
-    - **Vijaykrishnan Narayanan** (Penn State University)
-
-    Over the past decade or so, Processing in Memory (PIM) has evolved from
-    single-cell demonstrations to large scale commercial deployment by leading
-    processor and memory vendors. This workshop recognizes the pervasiveness of PIM
-    across several application domains that form the backbone of computing systems
-    today. It seeks to identify the successes, failures, and future opportunities
-    for these technologies, potential new applications, and the development of
-    tools, runtimes and other essential infrastructure that will dictate ongoing
-    research this field.
-
-    See the [workshop page](https://nextpim.github.io/2022/) for more information.
 
     <a id="tut1-1"></a>
 
