Add PACT 23 preview session

--- a/pages/program.html
+++ b/pages/program.html
@@ -61,6 +61,11 @@
         <td>Welcome from the Chairs</td>
         <td>Discovery Room, DPI</td>
       </tr>
+      <tr>
+        <td>8:25&ndash;8:30</td>
+        <td>PACT 2023 in Vienna: A Preview</td>
+        <td>Discovery Room, DPI</td>
+      </tr>
       {{ keynote("Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design", 0) }}
       {{ food("9:30", "10:00", "Coffee Break") }}
       {{ program_tracks("10:00", "12:00", program["monday"]["morning"]) }}
