Announce social event

--- a/pages/program.html
+++ b/pages/program.html
@@ -145,8 +145,10 @@
       {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
       {{ program_tracks("13:30", "15:00", program["tuesday"]["afternoon"]) }}
       {{ food("15:00", "15:30", "Coffee Break") }}
-      {{ program_tracks("15:30", "17:00", program["tuesday"]["evening"]) }}
-      {{ food("17:30", "20:30", "Banquet / Excursion", "TBA") }}
+      {{ program_tracks("15:30", "16:30", program["tuesday"]["evening"]) }}
+      {{ food("17:00", "20:30", "<p>Banquet / Excursion: Architecture Boat Tour (boarding starts 17:15, vessel departs 17:30 sharp)<p>
+      <p>The dock is a <b>30-minute walk from DPI</b>. Please make sure to allow sufficient time.</p>",
+      "<a href='https://www.google.com/maps/place/Wendella+tours+Docks+3+and+4/@41.8891462,-87.6278298,17z/data=!3m1!4b1!4m5!3m4!1s0x880e2d071c55a07d:0x4832841889121c35!8m2!3d41.8891462!4d-87.6256411'>Wendella West Dock 4</a>") }}
     </table>
 
     <a id="keynote-1"></a>
